# softrng

./: .gitignore  .~lock.results.ods#  Cargo.toml  README  README.md  additional_dieharder.sh  additional_practrand.sh  additional_testu01.sh  bspec32.txt  build.sh  config.h  configure.ac  configure~  install.sh  launch_synthetic_test.sh  test.sh
_testu01_/TestU01-1.2.3/: config.status  libtool
_testu01_/TestU01-1.2.3/mylib/: libmylib.la
_testu01_/TestU01-1.2.3/mylib/.libs/: libmylib.lai
_testu01_/TestU01-1.2.3/probdist/: libprobdist.la
_testu01_/TestU01-1.2.3/probdist/.libs/: libprobdist.lai
_testu01_/TestU01-1.2.3/testu01/: libtestu01.la
_testu01_/TestU01-1.2.3/testu01/.libs/: libtestu01.0.0.1.dylib
_testu01_/lib/: libmylib.0.0.1.dylib  libprobdist.0.0.1.dylib  libtestu01.la
assets/: manual.txt
etc/: manual.txt
etc/modules/: RNG_output  RNG_output.cmd.txt  RNG_test  RNG_test.cmd.txt  dieharder  dieharder.cmd.txt  softrng.cmd.txt
logs/: dieharder.error  practrand.err.txt  practrand.error  practrand.std.txt  softrng.err.txt  softrng.error  testu01.err.txt  testu01.error  testu01.std.txt
softrng/: manual.txt
softrng/help/: Todo.txt
softrng/modules/: RNG_output  RNG_test  dieharder  softrng
src/: Makefile.am  f-file.c  f-limit.c  f-merge.c  f-not.c  f-peek.c  f-prng-qxo64.c  f-prng-roxo64.c  lib.rs  libicm.c  libicm.h  qxo128.rs  qxo64.rs  rngsetup.c  s-ent-getent.c  s-ent-password.c  s-ent-synthetic.c  s-file.c  s-zeros.c  seedy64.rs  shitter.c  softrng.c  sr_config.h  sr_default.h  sr_rngoutputshim.c  sr_testu01small  sr_testu01small.c  sr_timertest.c  srf_ask.c  srf_bench.c  srf_fork.c  srf_fread.c  srf_fwrite.c  srf_hex.c  srf_limit.c  srf_limitsize.c  srf_multixor.c  srf_void.c  srf_xor.c  srg_qxo64.c  (+19 more)
test_results/: consolidated.ods
