bin_PROGRAMS = srs_getent srs_icm64 srg_zeros srf_ask softrng srs_icm64mix srf_fread srf_fwrite srt_bspec32 sr_sleepinfo srf_limitsize srf_xor srf_bench srf_void srf_hex srg_roxo64 srg_qxo64 srt_bspec32_ref

softrngdir = ./
softrng_SOURCES = softrng.c
softrng_HEADERS = sr_default.h

srg_zerosdir = ./
srg_zeros_SOURCES = srg_zeros.c
srg_zeros_HEADERS = sr_config.h

srf_askdir = ./
srf_ask_SOURCES = srf_ask.c
srf_ask_HEADERS = sr_config.h

srs_getentdir = ./
srs_getent_SOURCES = srs_getent.c libicm.c
srs_getent_HEADERS = libicm.h primes.txt primes.large.txt sr_config.h

srs_icm64dir = ./
srs_icm64_SOURCES = srs_icm64.c libicm.c
srs_icm64_HEADERS = libicm.h primes.txt primes.large.txt sr_config.h

srs_icm64mixdir = ./
srs_icm64mix_SOURCES = srs_icm64mix.c libicm.c
srs_icm64mix_HEADERS = libicm.h primes.txt primes.large.txt sr_config.h

srt_bspec32dir = ./
srt_bspec32_SOURCES = srt_bspec32.c common.c
srt_bspec32_HEADERS = common.h sr_config.h

sr_sleepinfodir = ./
sr_sleepinfo_SOURCES = sr_sleepinfo.c common.c 
sr_sleepinfo_HEADERS = common.h sr_config.h

srf_freaddir = ./
srf_fread_SOURCES = srf_fread.c
srf_fread_HEADERS = sr_config.h

srf_fwritedir = ./
srf_fwrite_SOURCES = srf_fwrite.c
srf_fwrite_HEADERS = sr_config.h

srf_limitsizedir = ./
srf_limitsize_SOURCES = srf_limitsize.c
srf_limitsize_HEADERS = sr_config.h

srg_roxo64dir = ./
srg_roxo64_SOURCES = srg_roxo64.c
srg_roxo64_HEADERS = sr_config.h

srg_qxo64dir = ./
srg_qxo64_SOURCES = srg_qxo64.c
srg_qxo64_HEADERS = sr_config.h

srf_voiddir = ./
srf_void_SOURCES = srf_void.c
srf_void_HEADERS = sr_config.h

srf_hexdir = ./
srf_hex_SOURCES = srf_hex.c
srf_hex_HEADERS = sr_config.h

srt_bspec32_refdir = ./
srt_bspec32_ref_SOURCES = srt_bspec32_ref.c
srt_bspec32_ref_HEADERS = sr_config.h

srf_benchdir = ./
srf_bench_SOURCES = srf_bench.c common.c
srf_bench_HEADERS = common.h sr_config.h

srf_xordir = ./
srf_xor_SOURCES = srf_xor.c common.c
srf_xor_HEADERS = common.h sr_config.h

LIBS = -lpthread
